<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center">
        <!--Todo : Try changing language according to selected language afterwarsds by storing font style in a string and the renaming the font style according to the language that we want-->
        <TextView
            android:id="@+id/txtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/thyssen_italic"
            android:textSize="16sp"
            tools:text="English (United Kingdom)" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/insta_logo"
        android:contentDescription="@string/instagram_logo" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:src="@drawable/insta_name"
        android:contentDescription="@string/instagram_name"/>

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:fontFamily="@font/insta_name_font"-->
<!--            android:gravity="center"-->
<!--            android:text="Instagram"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="45dp" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_bg"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/thyssen_italic"
                android:hint="@string/phone_number_email_address_or_username"
                android:imeOptions="actionGo"
                android:inputType="textCapWords"
                android:padding="14dp"
                android:textColor="#363A43"
                android:textColorHint="#7A8089"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_bg">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/thyssen_italic"
                android:hint="@string/password"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textColor="#363A43"
                android:textColorHint="#7A8089"
                android:textSize="17sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/light_blue"
            android:fontFamily="@font/thyssen_italic"
            android:inputType="textCapWords"
            android:padding="15dp"
            android:text="@string/log_in"
            android:textSize="17sp"
            app:cornerRadius="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/thyssen_italic"
                android:text="@string/forgotten_your_login_details"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/thyssen_italic"
                android:text="@string/get_help_with_logging_in"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="12dp"
                android:layout_weight="5"
                android:background="@color/light_greyish" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/thyssen_italic"
                android:gravity="center"
                android:text="@string/or"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="20sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="12dp"
                android:layout_weight="5"
                android:background="@color/light_greyish" />
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/fb_icon"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/facebook_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/thyssen_italic"
                android:text="@string/continue_as_xyz"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:src="@drawable/meta_logo"
            android:contentDescription="@string/meta_logo"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_greyish" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/thyssen_italic"
                android:text="@string/don_t_have_an_account"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/thyssen_italic"
                android:text="@string/sign_up"
                android:textColor="@color/dark_blue"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_greyish" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:gravity="center|bottom"
            android:text="Creator: @SarvadnyaChiddarwar"
            android:textStyle="bold|italic"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>
